--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -2,23 +2,62 @@
 {
 	@Body,*
 	{
+		@Atmosphere:HAS[!AtmosphereFromGround:HAS[#innerRadius[*]]]
+		{
+			%AtmosphereFromGround
+			{
+				innerRadiusMult = 0.999375
+			}
+		}
+		@Atmosphere:HAS[!AtmosphereFromGround:HAS[#outerRadius[*]]]
+		{
+			%AtmosphereFromGround
+			{
+				outerRadiusMult = 1.025
+			}
+		}
+		@Atmosphere:HAS[#atmosphereDepth[*]]
+		{
+			%altitude = #$atmosphereDepth$
+			%maxAltitude = #$atmosphereDepth$
+		}
+		@Atmosphere:HAS[#altitude[*],~atmosphereDepth[*]]
+		{
+			%maxAltitude = #$altitude$
+			%atmosphereDepth = #$altitude$
+		}
+		@Atmosphere:HAS[#maxAltitude[*],~altitude[*],~atmosphereDepth[*]]
+		{
+			%altitude = #$maxAltitude$
+			%atmosphereDepth = #$maxAltitude$
+		}
 		@Atmosphere
 		{
 			@maxAltitude *= #$@SigmaDimensions/Atmosphere$
 			@altitude *= #$@SigmaDimensions/Atmosphere$
 			@atmosphereDepth *= #$@SigmaDimensions/Atmosphere$
+			%AtmosphereFromGround {}
 			@AtmosphereFromGround:HAS[~innerRadius[*]]
 			{
-				innerRadius = 0
+				innerRadius = #$../../Properties/radius$
+				@innerRadius *= #$innerRadiusMult$
+			}
+			@AtmosphereFromGround:HAS[~outerRadius[*]]
+			{
+				outerRadius = #$../../Properties/radius$
+				@outerRadius *= #$outerRadiusMult$
 			}
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
-				@outerRadius -= #$innerRadius$
+				@outerRadius -= #$../../Properties/radius$
 				@outerRadius *= #$@SigmaDimensions/Atmosphere$
-				@innerRadius *= #$@SigmaDimensions/Resize$
-				@outerRadius += #$innerRadius$
 				%transformScale = #$outerRadius$
-				@transformScale -= #$innerRadius$
+				@innerRadius *= #$@SigmaDimensions/Resize$
+				@outerRadius /= #$@SigmaDimensions/Resize$
+				@outerRadius += #$../../Properties/radius$
+				@outerRadius *= #$@SigmaDimensions/Resize$
+				!innerRadiusMult,* = DEL
+				!outerRadiusMult,* = DEL
 			}
 			@AtmosphereFromGround:HAS[#transformScale[<6000]]
 			{
@@ -26,10 +65,10 @@
 			}
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
-				@transformScale += #$innerRadius$
+				@transformScale /= #$../../Properties/radius$
+				@transformScale /= #$@SigmaDimensions/Resize$
+				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
-				@transformScale[*] /= #$../../Properties/radius$
-				@transformScale[*] /= #$@SigmaDimensions/Resize$
 			}
 			@AtmosphereFromGround:HAS[#sunAtmo[True]]
 			{
