--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -9,43 +9,77 @@
 			@deactivateAltitude *= #$@SigmaDimensions/fadeResize$
 			@Material
 			{
+				// Resize
 				@groundTexStart *= #$@SigmaDimensions/Resize$
 				@groundTexEnd *= #$@SigmaDimensions/Resize$
 				@steepTexStart *= #$@SigmaDimensions/Resize$
 				@steepTexEnd *= #$@SigmaDimensions/Resize$
+				// landscape
+				@groundTexStart *= #$@SigmaDimensions/landscape$
+				@groundTexEnd *= #$@SigmaDimensions/landscape$
+				@steepTexStart *= #$@SigmaDimensions/landscape$
+				@steepTexEnd *= #$@SigmaDimensions/landscape$
 			}
 			@FallbackMaterial
 			{
+				// Resize
 				@groundTexStart *= #$@SigmaDimensions/Resize$
 				@groundTexEnd *= #$@SigmaDimensions/Resize$
+				// landscape
+				@groundTexStart *= #$@SigmaDimensions/landscape$
+				@groundTexEnd *= #$@SigmaDimensions/landscape$
 			}
 			@Mods
 			{
 				@VertexSimplexHeightAbsolute,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseVertHeightCurve2,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
 					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
 					@simplexHeightStart *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
+					@simplexHeightEnd *= #$@SigmaDimensions/landscape$
+					@simplexHeightStart *= #$@SigmaDimensions/landscape$
 				}
 				@VertexRidgedAltitudeCurve,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
 					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
 					@simplexHeightStart *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
+					@simplexHeightEnd *= #$@SigmaDimensions/landscape$
+					@simplexHeightStart *= #$@SigmaDimensions/landscape$
 				}
 				@LandControl,*
 				{
 					@vHeightMax *= #$@SigmaDimensions/Resize$
+					@vHeightMax *= #$@SigmaDimensions/landscape$
 					@landClasses,*
 					{
 						@Class,*
 						{
+							// Resize
 							@alterApparentHeight *= #$@SigmaDimensions/Resize$
 							@alterRealHeight *= #$@SigmaDimensions/Resize$
+							// landscape
+							@alterApparentHeight *= #$@SigmaDimensions/landscape$
+							@alterRealHeight *= #$@SigmaDimensions/landscape$
 						}
 					}
 					@scatters,*
@@ -62,12 +96,16 @@
 				}
 				@AerialPerspectiveMaterial,*
 				{
-					@atmosphereDepth *= #$@SigmaDimensions/Resize$
+					@atmosphereDepth *= #$@SigmaDimensions/Atmosphere$
 				}
 				@VertexHeightMap,*
 				{
-					@offset *= #$@SigmaDimensions/Resize$
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@AltitudeAlpha,*
 				{
@@ -75,47 +113,66 @@
 				}
 				@VertexSimplexHeight,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseVertHeight,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexPlanet,*
 				{
-					@colorDeformity *= #$@SigmaDimensions/Resize$
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					@colorDeformity *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
+					@colorDeformity *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightNoise,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@FlattenArea,*
 				{
+					// Resize
 					@flattenTo *= #$@SigmaDimensions/Resize$
 					@innerRadius *= #$@SigmaDimensions/Resize$
 					@outerRadius *= #$@SigmaDimensions/Resize$
+					// landscape
+					@flattenTo *= #$@SigmaDimensions/landscape$
 				}
-				@FlattenArea:HAS[#position[*]]
-				{
-					%vectorX = #$position[0]$
-					@vectorX *= #$@SigmaDimensions/Resize$
-					%vectorY = #$position[1]$
-					@vectorY *= #$@SigmaDimensions/Resize$
-					%vectorZ = #$position[2]$
-					@vectorZ *= #$@SigmaDimensions/Resize$
-					@position = #$vectorX$,$vectorY$,$vectorZ$
-					!vectorX = DEL
-					!vectorY = DEL
-					!vectorZ = DEL
-				}				
 				@VertexSimplexHeightMap,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightOffset,*
 				{
+					// Resize
 					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VoronoiCraters:HAS[~deformation[*]]
 				{
@@ -127,94 +184,126 @@
 				}
 				@VoronoiCraters,*
 				{
+					// Resize
 					@deformation *= #$@SigmaDimensions/Resize$
 					@jitterHeight *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformation *= #$@SigmaDimensions/landscape$
+					@jitterHeight *= #$@SigmaDimensions/landscape$
 				}
 				@VertexVoronoi,*
 				{
-					@deformation *= #$@SigmaDimensions/Resize$
+					// Resize
+					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@MapDecalTangent,*
 				{
+					// Resize
 					@absoluteOffset *= #$@SigmaDimensions/Resize$
 					@heightMapDeformity *= #$@SigmaDimensions/Resize$
 					@radius *= #$@SigmaDimensions/Resize$
+					// landscape
+					@absoluteOffset *= #$@SigmaDimensions/landscape$
+					@heightMapDeformity *= #$@SigmaDimensions/landscape$
 				}
-				@MapDecalTangent:HAS[#position[*]]
-				{
-					%vectorX = #$position[0]$
-					@vectorX *= #$@SigmaDimensions/Resize$
-					%vectorY = #$position[1]$
-					@vectorY *= #$@SigmaDimensions/Resize$
-					%vectorZ = #$position[2]$
-					@vectorZ *= #$@SigmaDimensions/Resize$
-					@position = #$vectorX$,$vectorY$,$vectorZ$
-					!vectorX = DEL
-					!vectorY = DEL
-					!vectorZ = DEL
-				}	
 				@MapDecal,*
 				{
+					// Resize
 					@absoluteOffset *= #$@SigmaDimensions/Resize$
 					@heightMapDeformity *= #$@SigmaDimensions/Resize$
 					@radius *= #$@SigmaDimensions/Resize$
-				}
-				@MapDecal:HAS[#position[*]]
-				{
-					%vectorX = #$position[0]$
-					@vectorX *= #$@SigmaDimensions/Resize$
-					%vectorY = #$position[1]$
-					@vectorY *= #$@SigmaDimensions/Resize$
-					%vectorZ = #$position[2]$
-					@vectorZ *= #$@SigmaDimensions/Resize$
-					@position = #$vectorX$,$vectorY$,$vectorZ$
-					!vectorX = DEL
-					!vectorY = DEL
-					!vectorZ = DEL
+					// landscape
+					@absoluteOffset *= #$@SigmaDimensions/landscape$
+					@heightMapDeformity *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightOffset,*
 				{
+					// Resize
 					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightOblate,*
 				{
+					// Resize
 					@height *= #$@SigmaDimensions/Resize$
+					// landscape
+					@height *= #$@SigmaDimensions/landscape$
 				}
 				@FlattenMountains,*
 				{
+					// Resize
 					@altitude *= #$@SigmaDimensions/Resize$
+					// landscape
+					@altitude *= #$@SigmaDimensions/landscape$
 				}
 				@FlattenOcean,*
 				{
+					// Resize
 					@oceanRadius *= #$@SigmaDimensions/Resize$
+					// landscape
+					@oceanRadius *= #$@SigmaDimensions/landscape$
 				}
 				@VertexDefineCoastLine,*
 				{
+					// Resize
 					@depthOffset *= #$@SigmaDimensions/Resize$
 					@oceanRadiusOffset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@depthOffset *= #$@SigmaDimensions/landscape$
+					@oceanRadiusOffset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightMapStep,*
 				{
-					@offset *= #$@SigmaDimensions/Resize$
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseHeightMap,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
 					@heightEnd *= #$@SigmaDimensions/Resize$
 					@heightStart *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
+					@heightEnd *= #$@SigmaDimensions/landscape$
+					@heightStart *= #$@SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseVertHeightCurve,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
 					@heightEnd *= #$@SigmaDimensions/Resize$
 					@heightStart *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
+					@heightEnd *= #$@SigmaDimensions/landscape$
+					@heightStart *= #$@SigmaDimensions/landscape$
 				}
 				@VertexRidgedAltitudeCurve,*
 				{
+					// Resize
 					@deformity *= #$@SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
 					@simplexHeightStart *= #$@SigmaDimensions/Resize$
 					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
+					// landscape
+					@deformity *= #$@SigmaDimensions/landscape$
+					@offset *= #$@SigmaDimensions/landscape$
+					@simplexHeightStart *= #$@SigmaDimensions/landscape$
+					@simplexHeightEnd *= #$@SigmaDimensions/landscape$
 				}
 			}
 		}
