--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -52,6 +52,7 @@
 				@outerRadius -= #$../../Properties/radius$
 				@outerRadius *= #$@SigmaDimensions/Atmosphere$
 				%transformScale = #$outerRadius$
+				@transformScale *= #$@SigmaDimensions/atmoVisualEffect$
 				@innerRadius *= #$@SigmaDimensions/Resize$
 				@outerRadius /= #$@SigmaDimensions/Resize$
 				@outerRadius += #$../../Properties/radius$
