--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -96,3 +96,11 @@
 	%changeScatterDensity = #$Resize$
 	@changeScatterDensity != -2
 }
+@SigmaDimensions:HAS[~landscape[>0]]:AFTER[SigDim]
+{
+	%landscape = 1
+}
+@SigmaDimensions:HAS[~atmoVisualEffect[>0]]:AFTER[SigDim]
+{
+	%atmoVisualEffect = 1
+}
