--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -66,6 +66,7 @@
 			@heightMapDeformity *= 0.9255
 			@absoluteOffset += #$heightMapDeformity$
 			@absoluteOffset *= #$@SigmaDimensions/Resize$
+			@absoluteOffset *= #$@SigmaDimensions/landscape$
 			@heightMapDeformity = 0
 			%repositionRadiusOffset = #$absoluteOffset$
 			@repositionRadiusOffset -= 22.3
