--- a/GameData/Sigma/Dimensions/Configs/ReDimension/KSCSwitcher.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/KSCSwitcher.cfg
@@ -10,6 +10,7 @@
 				@heightMapDeformity *= 0.9255
 				@absoluteOffset += #$heightMapDeformity$
 				@absoluteOffset *= #$Resize$
+				@absoluteOffset *= #$landscape$
 				@heightMapDeformity = 0
 			}
 			@PQSMod_MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
