--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,4 +1,4 @@
-﻿@Kopernicus:AFTER[SigDim]
+@Kopernicus:AFTER[SigDim]
 {
 	%SigmaDimensionsResize = #$@SigmaDimensions/Resize$
 }
@@ -10,8 +10,8 @@
 	}
 	@Body,*
 	{
-		@cacheFile = #Sigma/Dimensions/Cache/.bin§$@SigmaDimensions/Resize$x]/$cacheFile$§$@SigmaDimensions/Resize$x].bin
-		@cacheFile ^= :.bin§:[:
+		@cacheFile = #Sigma/Dimensions/Cache/§$@SigmaDimensions/Resize$x]Resize/§$@SigmaDimensions/landscape$x]landscape/$cacheFile$
+		@cacheFile ^= :§:[:
 	}
 }
 @Kopernicus:AFTER[SigDim]
