atmo and pqs fixes

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -178,9 +178,9 @@
 				@VertexVoronoi,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
+					@deformation *= #$@SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
+					@deformation *= #$@SigmaDimensions/landscape$
 				}
 				@MapDecalTangent,*
 				{
