--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -1,4 +1,4 @@
-@PQS_MANAGER,*:AFTER[SigDim]
+@PQS_MANAGER:AFTER[SigDim]
 {
 	SigmaDimensionsResize = #$@SigmaDimensions/Resize$
 }
@@ -9,11 +9,11 @@
 		@deactivateDistance *= #$SigmaDimensions/Resize$
 	}
 }
-@PQS_MANAGER,*:AFTER[SigDim]
+@PQS_MANAGER:AFTER[SigDim]
 {
 	!SigmaDimensionsResize = DEL
 }
-@EVE_CLOUDS,*:AFTER[SigDim]
+@EVE_CLOUDS:AFTER[SigDim]
 {
 	@OBJECT,*
 	{
