--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,8 +1,8 @@
 @Kopernicus:AFTER[SigDim]
 {
-	%SigmaDimensionsResize = #$@SigmaDimensions/Resize$
+	%skipCache = #$@SigmaDimensions/skipCache$
 }
-@Kopernicus:HAS[~SigmaDimensionsResize[1]]:AFTER[SigDim]
+@Kopernicus:HAS[~skipCache[True]]:AFTER[SigDim]
 {
 	@Body:HAS[~cacheFile[*]]
 	{
@@ -16,5 +16,5 @@
 }
 @Kopernicus:AFTER[SigDim]
 {
-	!SigmaDimensionsResize = DEL
+	!skipCache = DEL
 }
