--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -33,9 +33,9 @@
 		}
 		@Atmosphere
 		{
-			@maxAltitude *= #$@SigmaDimensions/Atmosphere$
-			@altitude *= #$@SigmaDimensions/Atmosphere$
-			@atmosphereDepth *= #$@SigmaDimensions/Atmosphere$
+			@maxAltitude *= #$../PlanetDimensions[2]$
+			@altitude *= #$../PlanetDimensions[2]$
+			@atmosphereDepth *= #$../PlanetDimensions[2]$
 			%AtmosphereFromGround {}
 			@AtmosphereFromGround:HAS[~innerRadius[*]]
 			{
@@ -50,13 +50,13 @@
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
 				@outerRadius -= #$../../Properties/radius$
-				@outerRadius *= #$@SigmaDimensions/Atmosphere$
+				@outerRadius *= #$../../PlanetDimensions[2]$
 				%transformScale = #$outerRadius$
-				@transformScale *= #$@SigmaDimensions/atmoVisualEffect$
-				@innerRadius *= #$@SigmaDimensions/Resize$
-				@outerRadius /= #$@SigmaDimensions/Resize$
+				@transformScale *= #$../../PlanetDimensions[6]$
+				@innerRadius *= #$../../PlanetDimensions[0]$
+				@outerRadius /= #$../../PlanetDimensions[0]$
 				@outerRadius += #$../../Properties/radius$
-				@outerRadius *= #$@SigmaDimensions/Resize$
+				@outerRadius *= #$../../PlanetDimensions[0]$
 				!innerRadiusMult,* = DEL
 				!outerRadiusMult,* = DEL
 			}
@@ -67,7 +67,7 @@
 			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
 				@transformScale /= #$../../Properties/radius$
-				@transformScale /= #$@SigmaDimensions/Resize$
+				@transformScale /= #$../../PlanetDimensions[0]$
 				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
 			}
@@ -84,12 +84,12 @@
 			@pressureCurve
 			{
 				@key,* ^= : :,:
-				@key,*[0] *= #$@SigmaDimensions/Atmosphere$
+				@key,*[0] *= #$../../PlanetDimensions[2]$
 			}
 			@pressureCurve:HAS[#key[*,*,*,*]]
 			{
-				@key,*[2] /= #$@SigmaDimensions/Atmosphere$
-				@key,*[3] /= #$@SigmaDimensions/Atmosphere$
+				@key,*[2] /= #$../../PlanetDimensions[2]$
+				@key,*[3] /= #$../../PlanetDimensions[2]$
 			}
 			@pressureCurve
 			{
@@ -103,12 +103,12 @@
 			@temperatureCurve
 			{
 				@key,* ^= : :,:
-				@key,*[0] *= #$@SigmaDimensions/Atmosphere$
+				@key,*[0] *= #$../../PlanetDimensions[2]$
 			}
 			@temperatureCurve:HAS[#key[*,*,*,*]]
 			{
-				@key,*[2] /= #$@SigmaDimensions/Atmosphere$
-				@key,*[3] /= #$@SigmaDimensions/Atmosphere$
+				@key,*[2] /= #$../../PlanetDimensions[2]$
+				@key,*[3] /= #$../../PlanetDimensions[2]$
 			}
 			@temperatureCurve
 			{
@@ -122,12 +122,12 @@
 			@temperatureSunMultCurve
 			{
 				@key,* ^= : :,:
-				@key,*[0] *= #$@SigmaDimensions/Atmosphere$
+				@key,*[0] *= #$../../PlanetDimensions[2]$
 			}
 			@temperatureSunMultCurve:HAS[#key[*,*,*,*]]
 			{
-				@key,*[2] /= #$@SigmaDimensions/Atmosphere$
-				@key,*[3] /= #$@SigmaDimensions/Atmosphere$
+				@key,*[2] /= #$../../PlanetDimensions[2]$
+				@key,*[3] /= #$../../PlanetDimensions[2]$
 			}
 			@temperatureSunMultCurve
 			{
