--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,20 +1,12 @@
 @Kopernicus:AFTER[SigDim]
 {
-	%skipCache = #$@SigmaDimensions/skipCache$
-}
-@Kopernicus:HAS[~skipCache[True]]:AFTER[SigDim]
-{
-	@Body:HAS[~cacheFile[*]]
+	@Body:HAS[#PlanetDimensions[*,True],~cacheFile[*]]
 	{
 		cacheFile = #Kopernicus/Cache/$name$.bin
 	}
-	@Body,*
+	@Body:HAS[#PlanetDimensions[*,True]]
 	{
-		@cacheFile = #Sigma/Dimensions/Cache/§$@SigmaDimensions/Resize$x]Resize/§$@SigmaDimensions/landscape$x]landscape/$cacheFile$
+		@cacheFile = #Sigma/Dimensions/Cache/§$PlanetDimensions[0]$x]Resize/§$PlanetDimensions[5]$x]landscape/$cacheFile$
 		@cacheFile ^= :§:[:
 	}
-}
-@Kopernicus:AFTER[SigDim]
-{
-	!skipCache = DEL
 }
