--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -4,10 +4,17 @@
 }
 @PQS_MANAGER:HAS[#SigmaDimensionsResize[>1]]:AFTER[SigDim]
 {
-	@OBJECT,*
+	@OBJECT:HAS[~customResize[>0]]
 	{
 		@deactivateDistance *= #$SigmaDimensions/Resize$
 	}
+}
+@PQS_MANAGER:AFTER[SigDim]
+{
+	@OBJECT:HAS[#customResize[>0]]
+	{
+		@deactivateDistance *= #$customResize$
+	}	
 }
 @PQS_MANAGER:AFTER[SigDim]
 {
@@ -15,8 +22,12 @@
 }
 @EVE_CLOUDS:AFTER[SigDim]
 {
-	@OBJECT,*
+	@OBJECT:HAS[~customResize[>0]]
 	{
 		@altitude *= #$@SigmaDimensions/Resize$
+	}
+	@OBJECT:HAS[#customResize[>0]]
+	{
+		@altitude *= #$customResize$
 	}
 }
