--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -4,159 +4,156 @@
 	{
 		@PQS
 		{
-			@fadeStart *= #$@SigmaDimensions/fadeResize$
-			@fadeEnd *= #$@SigmaDimensions/fadeResize$
-			@deactivateAltitude *= #$@SigmaDimensions/fadeResize$
 			@Material
 			{
 				// Resize
-				@groundTexStart *= #$@SigmaDimensions/Resize$
-				@groundTexEnd *= #$@SigmaDimensions/Resize$
-				@steepTexStart *= #$@SigmaDimensions/Resize$
-				@steepTexEnd *= #$@SigmaDimensions/Resize$
+				@groundTexStart *= #$../../PlanetDimensions[0]$
+				@groundTexEnd *= #$../../PlanetDimensions[0]$
+				@steepTexStart *= #$../../PlanetDimensions[0]$
+				@steepTexEnd *= #$../../PlanetDimensions[0]$
 				// landscape
-				@groundTexStart *= #$@SigmaDimensions/landscape$
-				@groundTexEnd *= #$@SigmaDimensions/landscape$
-				@steepTexStart *= #$@SigmaDimensions/landscape$
-				@steepTexEnd *= #$@SigmaDimensions/landscape$
+				@groundTexStart *= #$../../PlanetDimensions[5]$
+				@groundTexEnd *= #$../../PlanetDimensions[5]$
+				@steepTexStart *= #$../../PlanetDimensions[5]$
+				@steepTexEnd *= #$../../PlanetDimensions[5]$
 			}
 			@FallbackMaterial
 			{
 				// Resize
-				@groundTexStart *= #$@SigmaDimensions/Resize$
-				@groundTexEnd *= #$@SigmaDimensions/Resize$
+				@groundTexStart *= #$../../PlanetDimensions[0]$
+				@groundTexEnd *= #$../../PlanetDimensions[0]$
 				// landscape
-				@groundTexStart *= #$@SigmaDimensions/landscape$
-				@groundTexEnd *= #$@SigmaDimensions/landscape$
+				@groundTexStart *= #$../../PlanetDimensions[5]$
+				@groundTexEnd *= #$../../PlanetDimensions[5]$
 			}
 			@Mods
 			{
 				@VertexSimplexHeightAbsolute,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightNoiseVertHeightCurve2,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
-					@simplexHeightStart *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@simplexHeightEnd *= #$../../../PlanetDimensions[0]$
+					@simplexHeightStart *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@simplexHeightEnd *= #$@SigmaDimensions/landscape$
-					@simplexHeightStart *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@simplexHeightEnd *= #$../../../PlanetDimensions[5]$
+					@simplexHeightStart *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexRidgedAltitudeCurve,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
-					@simplexHeightStart *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@simplexHeightEnd *= #$../../../PlanetDimensions[0]$
+					@simplexHeightStart *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@simplexHeightEnd *= #$@SigmaDimensions/landscape$
-					@simplexHeightStart *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@simplexHeightEnd *= #$../../../PlanetDimensions[5]$
+					@simplexHeightStart *= #$../../../PlanetDimensions[5]$
 				}
 				@LandControl,*
 				{
-					@vHeightMax *= #$@SigmaDimensions/Resize$
-					@vHeightMax *= #$@SigmaDimensions/landscape$
+					@vHeightMax *= #$../../../PlanetDimensions[0]$
+					@vHeightMax *= #$../../../PlanetDimensions[5]$
 					@landClasses,*
 					{
 						@Class,*
 						{
 							// Resize
-							@alterApparentHeight *= #$@SigmaDimensions/Resize$
-							@alterRealHeight *= #$@SigmaDimensions/Resize$
+							@alterApparentHeight *= #$../../../../../PlanetDimensions[0]$
+							@alterRealHeight *= #$../../../../../PlanetDimensions[0]$
 							// landscape
-							@alterApparentHeight *= #$@SigmaDimensions/landscape$
-							@alterRealHeight *= #$@SigmaDimensions/landscape$
+							@alterApparentHeight *= #$../../../../../PlanetDimensions[5]$
+							@alterRealHeight *= #$../../../../../PlanetDimensions[5]$
 						}
 					}
 					@scatters,*
 					{
 						@Scatter,*
 						{
-							@maxLevelOffset *= #$@SigmaDimensions/changeScatterSize$
-							@maxScale *= #$@SigmaDimensions/changeScatterSize$
-							@minScale *= #$@SigmaDimensions/changeScatterSize$
-							@verticalOffset *= #$@SigmaDimensions/changeScatterSize$
-							@densityFactor *= #$@SigmaDimensions/changeScatterDensity$
+							@maxLevelOffset *= #$../../../../../PlanetDimensions[10]$
+							@maxScale *= #$../../../../../PlanetDimensions[10]$
+							@minScale *= #$../../../../../PlanetDimensions[10]$
+							@verticalOffset *= #$../../../../../PlanetDimensions[10]$
+							@densityFactor *= #$../../../../../PlanetDimensions[11]$
 						}
 					}
 				}
 				@AerialPerspectiveMaterial,*
 				{
-					@atmosphereDepth *= #$@SigmaDimensions/Atmosphere$
+					@atmosphereDepth *= #$../../../PlanetDimensions[2]$
 				}
 				@VertexHeightMap,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@offset *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@offset *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@offset *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@offset *= #$../../../PlanetDimensions[5]$
 				}
 				@AltitudeAlpha,*
 				{
-					@atmosphereDepth *= #$@SigmaDimensions/Resize$
+					@atmosphereDepth *= #$../../../PlanetDimensions[0]$
 				}
 				@VertexSimplexHeight,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightNoiseVertHeight,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexPlanet,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@colorDeformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@colorDeformity *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@colorDeformity *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@colorDeformity *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightNoise,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
 				}
 				@FlattenArea,*
 				{
 					// Resize
-					@flattenTo *= #$@SigmaDimensions/Resize$
-					@innerRadius *= #$@SigmaDimensions/Resize$
-					@outerRadius *= #$@SigmaDimensions/Resize$
+					@flattenTo *= #$../../../PlanetDimensions[0]$
+					@innerRadius *= #$../../../PlanetDimensions[0]$
+					@outerRadius *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@flattenTo *= #$@SigmaDimensions/landscape$
+					@flattenTo *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexSimplexHeightMap,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightOffset,*
 				{
 					// Resize
-					@offset *= #$@SigmaDimensions/Resize$
+					@offset *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@offset *= #$@SigmaDimensions/landscape$
+					@offset *= #$../../../PlanetDimensions[5]$
 				}
 				@VoronoiCraters:HAS[~deformation[*]]
 				{
@@ -169,99 +166,99 @@
 				@VoronoiCraters,*
 				{
 					// Resize
-					@deformation *= #$@SigmaDimensions/Resize$
-					@jitterHeight *= #$@SigmaDimensions/Resize$
+					@deformation *= #$../../../PlanetDimensions[0]$
+					@jitterHeight *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformation *= #$@SigmaDimensions/landscape$
-					@jitterHeight *= #$@SigmaDimensions/landscape$
+					@deformation *= #$../../../PlanetDimensions[5]$
+					@jitterHeight *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexVoronoi,*
 				{
 					// Resize
-					@deformation *= #$@SigmaDimensions/Resize$
+					@deformation *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformation *= #$@SigmaDimensions/landscape$
+					@deformation *= #$../../../PlanetDimensions[5]$
 				}
 				@MapDecalTangent,*
 				{
 					// Resize
-					@absoluteOffset *= #$@SigmaDimensions/Resize$
-					@heightMapDeformity *= #$@SigmaDimensions/Resize$
-					@radius *= #$@SigmaDimensions/Resize$
+					@absoluteOffset *= #$../../../PlanetDimensions[0]$
+					@heightMapDeformity *= #$../../../PlanetDimensions[0]$
+					@radius *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@absoluteOffset *= #$@SigmaDimensions/landscape$
-					@heightMapDeformity *= #$@SigmaDimensions/landscape$
+					@absoluteOffset *= #$../../../PlanetDimensions[5]$
+					@heightMapDeformity *= #$../../../PlanetDimensions[5]$
 				}
 				@MapDecal,*
 				{
 					// Resize
-					@absoluteOffset *= #$@SigmaDimensions/Resize$
-					@heightMapDeformity *= #$@SigmaDimensions/Resize$
-					@radius *= #$@SigmaDimensions/Resize$
+					@absoluteOffset *= #$../../../PlanetDimensions[0]$
+					@heightMapDeformity *= #$../../../PlanetDimensions[0]$
+					@radius *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@absoluteOffset *= #$@SigmaDimensions/landscape$
-					@heightMapDeformity *= #$@SigmaDimensions/landscape$
+					@absoluteOffset *= #$../../../PlanetDimensions[5]$
+					@heightMapDeformity *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightOblate,*
 				{
 					// Resize
-					@height *= #$@SigmaDimensions/Resize$
+					@height *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@height *= #$@SigmaDimensions/landscape$
+					@height *= #$../../../PlanetDimensions[5]$
 				}
 				@FlattenMountains,*
 				{
 					// Resize
-					@altitude *= #$@SigmaDimensions/Resize$
+					@altitude *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@altitude *= #$@SigmaDimensions/landscape$
+					@altitude *= #$../../../PlanetDimensions[5]$
 				}
 				@FlattenOcean,*
 				{
 					// Resize
-					@oceanRadius *= #$@SigmaDimensions/Resize$
+					@oceanRadius *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@oceanRadius *= #$@SigmaDimensions/landscape$
+					@oceanRadius *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexDefineCoastLine,*
 				{
 					// Resize
-					@depthOffset *= #$@SigmaDimensions/Resize$
-					@oceanRadiusOffset *= #$@SigmaDimensions/Resize$
+					@depthOffset *= #$../../../PlanetDimensions[0]$
+					@oceanRadiusOffset *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@depthOffset *= #$@SigmaDimensions/landscape$
-					@oceanRadiusOffset *= #$@SigmaDimensions/landscape$
+					@depthOffset *= #$../../../PlanetDimensions[5]$
+					@oceanRadiusOffset *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightMapStep,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@offset *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@offset *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@offset *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@offset *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightNoiseHeightMap,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@heightEnd *= #$@SigmaDimensions/Resize$
-					@heightStart *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@heightEnd *= #$../../../PlanetDimensions[0]$
+					@heightStart *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@heightEnd *= #$@SigmaDimensions/landscape$
-					@heightStart *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@heightEnd *= #$../../../PlanetDimensions[5]$
+					@heightStart *= #$../../../PlanetDimensions[5]$
 				}
 				@VertexHeightNoiseVertHeightCurve,*
 				{
 					// Resize
-					@deformity *= #$@SigmaDimensions/Resize$
-					@heightEnd *= #$@SigmaDimensions/Resize$
-					@heightStart *= #$@SigmaDimensions/Resize$
+					@deformity *= #$../../../PlanetDimensions[0]$
+					@heightEnd *= #$../../../PlanetDimensions[0]$
+					@heightStart *= #$../../../PlanetDimensions[0]$
 					// landscape
-					@deformity *= #$@SigmaDimensions/landscape$
-					@heightEnd *= #$@SigmaDimensions/landscape$
-					@heightStart *= #$@SigmaDimensions/landscape$
+					@deformity *= #$../../../PlanetDimensions[5]$
+					@heightEnd *= #$../../../PlanetDimensions[5]$
+					@heightStart *= #$../../../PlanetDimensions[5]$
 				}
 			}
 		}
