--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -4,14 +4,14 @@
 	{
 		@Properties
 		{
-			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Atmosphere$
+			@timewarpAltitudeLimits,0[*, ] *= #$../PlanetDimensions[2]$
 		}
 	}
 	@Body:HAS[!Atmosphere]
 	{
 		@Properties
 		{
-			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Resize$
+			@timewarpAltitudeLimits,0[*, ] *= #$../PlanetDimensions[0]$
 		}
 	}
 	@Body,*
@@ -25,48 +25,47 @@
 		}
 		@Properties
 		{
-			@radius *= #$@SigmaDimensions/Resize$
-			@mass *= #$@SigmaDimensions/Resize$
-			@mass *= #$@SigmaDimensions/Resize$
-			@mass *= #$@SigmaDimensions/geeASLmultiplier$
-			@rotationPeriod *= #$@SigmaDimensions/dayLengthMultiplier$
-			@inverseRotThresholdAltitude *= #$@SigmaDimensions/Resize$
-			@sphereOfInfluence *= #$@SigmaDimensions/SoIsFromRadius$
+			@radius *= #$../PlanetDimensions[0]$
+			@mass *= #$../PlanetDimensions[0]$
+			@mass *= #$../PlanetDimensions[0]$
+			@mass *= #$../PlanetDimensions[4]$
+			@rotationPeriod *= #$../PlanetDimensions[3]$
+			@inverseRotThresholdAltitude *= #$../PlanetDimensions[0]$
+			@sphereOfInfluence *= #$../PlanetDimensions[8]$
 			@ScienceValues
 			{
-				@flyingAltitudeThreshold *= #$@SigmaDimensions/Atmosphere$
-				@spaceAltitudeThreshold *= #$@SigmaDimensions/Rescale$
+				@flyingAltitudeThreshold *= #$../../PlanetDimensions[2]$
+				@spaceAltitudeThreshold *= #$../../PlanetDimensions[1]$
 				@spaceAltitudeThreshold -= #$../radius$
 			}
 		}
 		@Orbit
 		{
-			@semiMajorAxis *= #$@SigmaDimensions/Rescale$
+			@semiMajorAxis *= #$../PlanetDimensions[1]$
 		}
 		@ScaledVersion
 		{
-			@fadeStart *= #$@SigmaDimensions/fadeResize$
-			@fadeEnd *= #$@SigmaDimensions/fadeResize$
 			@Light
 			{
-				@sunAU *= #$@SigmaDimensions/Resize$
+				@sunAU *= #$../../PlanetDimensions[0]$
 			}
 		}
 		@Rings
 		{
 			@Ring
 			{
-				@outerRadius *= #$@SigmaDimensions/RingsFromRadius$
-				@innerRadius *= #$@SigmaDimensions/RingsFromRadius$
+				@outerRadius *= #$../../PlanetDimensions[9]$
+				@innerRadius *= #$../../PlanetDimensions[9]$
 			}
 		}
 		@SpaceCenter
 		{
-			%Resize = #$@SigmaDimensions/Resize$
+			%Resize = #$../PlanetDimensions[0]$
+			%landscape = #$../PlanetDimensions[5]$
 			@heightMapDeformity *= 0.9255
 			@absoluteOffset += #$heightMapDeformity$
-			@absoluteOffset *= #$@SigmaDimensions/Resize$
-			@absoluteOffset *= #$@SigmaDimensions/landscape$
+			@absoluteOffset *= #$Resize$
+			@absoluteOffset *= #$landscape$
 			@heightMapDeformity = 0
 			%repositionRadiusOffset = #$absoluteOffset$
 			@repositionRadiusOffset -= 22.3
@@ -88,7 +87,7 @@
 			{
 				@MapDecalTangent
 				{
-					%Resize = #$@SigmaDimensions/Resize$
+					%Resize = #$../../../PlanetDimensions[0]$
 					@radius /= #$Resize$
 				}
 				@MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
