--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -84,15 +84,11 @@
 			@pressureCurve
 			{
 				@key,* ^= : :,:
+				@key,* ^= :$:,0,0,x:
 				@key,*[0] *= #$../../PlanetDimensions[2]$
-			}
-			@pressureCurve:HAS[#key[*,*,*,*]]
-			{
 				@key,*[2] /= #$../../PlanetDimensions[2]$
 				@key,*[3] /= #$../../PlanetDimensions[2]$
-			}
-			@pressureCurve
-			{
+				@key,* ^= :,0,0,x$: :
 				@key,* ^= :,: :
 			}
 		}
@@ -103,15 +99,11 @@
 			@temperatureCurve
 			{
 				@key,* ^= : :,:
+				@key,* ^= :$:,0,0,x:
 				@key,*[0] *= #$../../PlanetDimensions[2]$
-			}
-			@temperatureCurve:HAS[#key[*,*,*,*]]
-			{
 				@key,*[2] /= #$../../PlanetDimensions[2]$
 				@key,*[3] /= #$../../PlanetDimensions[2]$
-			}
-			@temperatureCurve
-			{
+				@key,* ^= :,0,0,x$: :
 				@key,* ^= :,: :
 			}
 		}
@@ -122,15 +114,11 @@
 			@temperatureSunMultCurve
 			{
 				@key,* ^= : :,:
+				@key,* ^= :$:,0,0,x:
 				@key,*[0] *= #$../../PlanetDimensions[2]$
-			}
-			@temperatureSunMultCurve:HAS[#key[*,*,*,*]]
-			{
 				@key,*[2] /= #$../../PlanetDimensions[2]$
 				@key,*[3] /= #$../../PlanetDimensions[2]$
-			}
-			@temperatureSunMultCurve
-			{
+				@key,* ^= :,0,0,x$: :
 				@key,* ^= :,: :
 			}
 		}
