--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -97,7 +97,7 @@
 	{
 		@PlanetDimensions[8] = #$@SigmaDimensions/PlanetDimensions[8]$
 	}
-	@Body:HAS[#PlanetDimensions[*,RingsFromRadius,*]]
+	@Body:HAS[#PlanetDimensions[*,RingsFromRadius]]
 	{
 		@PlanetDimensions[9] = #$@SigmaDimensions/PlanetDimensions[9]$
 	}
